log/build_2024-11-20_21-15-50/locomotion/stderr.log
  File "/home/robot/human_ws/install/locomotion/lib/python3.10/site-packages/locomotion/locomotion.py", line 67
    if mean < 0.8
                 ^
SyntaxError: expected ':'

